--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "firestore:copy": "babel-node ./src/firestore-copy-data",
+    "bigquery:copy": "babel-node ./src/copy-to-bigquery",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Oleh Zasadnyy",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^8.7.0",
-    "lodash": "^4.17.19",
+    "firebase-admin": "^9.2.0",
+    "firestore-to-bigquery-export": "^1.7.2",
+    "lodash": "^4.17.20",
     "promise-fs": "^2.1.1"
   },
   "devDependencies": {
