--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "author": "Oleh Zasadnyy",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
-    "firestore-to-bigquery-export": "^1.7.2",
-    "lodash": "^4.17.20",
-    "promise-fs": "^2.1.1"
+    "firebase-admin": "9.2.0",
+    "firestore-to-bigquery-export": "1.7.2",
+    "lodash": "4.17.20",
+    "promise-fs": "2.1.1"
   },
   "devDependencies": {
-    "core-js": "^3.4.0",
-    "@babel/core": "^7.7.2",
-    "@babel/node": "^7.7.0",
-    "@babel/preset-env": "^7.7.1"
+    "core-js": "3.4.0",
+    "@babel/core": "7.7.2",
+    "@babel/node": "7.7.0",
+    "@babel/preset-env": "7.7.1"
   }
 }
